...
                                android:paddingTop="14dp"
                                android:paddingRight="14dp"
                                android:text="@string/movie_title"
                                android:textColor="@color/colorPrimaryDark" />

                            <TextView
                                android:id="@+id/textTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingTop="5dp"
                                android:paddingRight="14dp"
                                android:text="@string/dot_loading"
...
